# home-photo-cli

./: .env.example  .gitignore  .pre-commit-config.yaml  DockerFile  README_DUPLICATE_IMPROVEMENT.md  README_IMG02.md  README_MODELS.md  README_REPOSITORIES.md  docker-compose.yaml  estructuracaprta.md  pyproject.toml
app/: __int__.py  __main__.py  api.py  main_api.py  main_cli.py
app/application/use_cases/: call_process_photo.py  process_photo.py
app/cli/: parser.py
app/config/: container.py  settings.py
app/core/: embeddings.py  processor.py
app/db/: connection.py  models.py  schema.sql
app/db/repositories/: __init__.py  base_repository.py  duplicate_repository.py  face_embedding_repository.py  person_repository.py  photo_people_repository.py  photo_repository.py
app/domain/interfaces/: embedding_service.py  extension_service.py  hashing_service.py  photo_recogniction_service.py
app/domain/models/: duplicate_photo.py  people.py  photo.py  photo_people.py
app/domain/repositories/: base_repository.py  duplicate_photo_repository.py  people_repository.py  photo_people_repository.py  photo_repository.py  storage_repository.py  vector_repository.py
app/face/: cluster.py  detector.py  duplicate_checker.py
app/image/: duplicate_checker.py  loader.py  mover.py  utils.py
app/infrastructure/db/: models.py
app/infrastructure/repositories/: base_repository_orm.py  duplicate_photo_repository_orm.py  people_repository_orm.py  photo_people_repository_orm.py  photo_repository_orm.py  storage_repository_minio.py  vector_db_qdrant.py
app/infrastructure/services/: embedding_service_imple.py  extension_service_imple.py  hashing_service_imple.py  photo_recogniction_service_imple.py
